--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
             <div class="col-md-4 ">
 
               <div class="photo">
-                <%= image_tag photo.url.url %>
+                <%= image_tag photo.url.url, class: 'photo-url' %>
                 <div class="photo-info">
                   <p class="title">Title: <%= photo.title %></p>
                   <p class="date">Date: <%= photo.created_at.to_s(:cn_date) %></p>
