--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,46 +1,3 @@
 <div class="container">
-  <div class="row">
-    <div class="col-md-3 sidebar">
-      <h3>Tags</h3>
-      <ul class="tags">
-        <% Tag.all.each do |tag| %>
-          <li class="li-tag" data-name="<%= tag.name %>"> <%= tag.name %> </li>
-        <% end %>
-      </ul>
-
-      <a class="btn btn-primary js-upload-photo fileinput-button" href="javascript:;">
-        Upload Photo
-        <input id="fileupload" type="file" name="file">
-      </a>
-    </div>
-    <%# sidebar %>
-
-    <div class="col-md-9 main">
-      <div class="photos">
-        <div class="row">
-          <% @photos.each do |photo| %>
-            <div class="col-md-4 ">
-
-              <div class="photo">
-                <%= image_tag photo.url.url, class: 'photo-url', 'data-id': photo.id %>
-                <div class="photo-info">
-                  <p class="title">Title: <%= photo.title %></p>
-                  <p class="date">Date: <%= photo.created_at.to_s(:cn_date) %></p>
-                  <p class="tag">
-                    Tag: <span class="photo-tag"><%= photo&.tag&.name %></span>
-                    <%= text_field_tag :tag, photo&.tag&.name, 'data-id': photo.id, class: 'tag-input' %>
-                  </p>
-                </div>
-              </div>
-
-            </div>
-          <% end %>
-        </div>
-      </div>
-
-      <%= paginate @photos %>
-    </div>
-    <%# main %>
-
-  </div>
+  <%= react_component("Home", { tags: Tag.all.as_json(only: [:id, :name]) }) %>
 </div>
